--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -14,8 +14,8 @@ on:
     types: [started]
     
 env:
-  ROM_URL: https://coloroswebsitefs.coloros.com/coloroswebsite-coloros-com/grs_20200902092910/PCDM00_11_OTA_0340_all_YF5Pa99v4IYs.ozip
-  ROM_NAME: Generic
+  ROM_URL: https://bigota.d.miui.com/V12.0.4.0.QEACNXM/miui_MI8_V12.0.4.0.QEACNXM_30cdb1e4d3_10.0.zip
+  ROM_NAME: MIUI
   TZ: Asia/Shanghai
 
 jobs:
