--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -14,7 +14,7 @@ on:
     types: [started]
     
 env:
-  ROM_URL: https://bigota.d.miui.com/V12.0.4.0.QEACNXM/miui_MI8_V12.0.4.0.QEACNXM_30cdb1e4d3_10.0.zip
+  ROM_URL: https://bigota.d.miui.com/V12.0.14.0.QCDCNXM/miui_DANDELION_V12.0.14.0.QCDCNXM_90538a23c9_10.0.zip
   ROM_NAME: MIUI
   TZ: Asia/Shanghai
 
